--- a/index.tex
+++ b/index.tex
@@ -13,10 +13,8 @@
 \usepackage{parskip}
 \usepackage{svg}
 
-\begin{document}
-\let\includegraphicsold\includegraphics
-\renewcommand{\includegraphics}[1]{\includesvg{#1}}
 
+\begin{document}
 \title{DRAFT: Writing a codec for \texttt{libavcodec}}
 \author{Anamitra Ghorui}
 \date{\emph{Last updated \today}}
@@ -84,14 +82,14 @@ Timestamps are simply a numerical quantity that represents time. Used in the fol
 
 \section{Distinction Between Container Formats and Encoded Audio/Video Data}
 \begin{quote}
-\textbf{ Note for Developers with a Background in Object Oriented Languages}
+\textbf{Note for Developers with a Background in Object Oriented Languages}
 
 C does not have classes and similar provisions in the language, however, a very 
 similar method of programming is observable over here in the form of 
 \emph{context} structs and functions. Storage structs are used to handle 
 repetitive patterns such as for a set of decoder functions, parameters etc.
 
-\includegraphics{images/classes_and_c.svg}
+\includesvg{images/classes\_and\_c.svg}
 \end{quote}
 
 \end{document}
