--- a/index.tex
+++ b/index.tex
@@ -1,9 +1,9 @@
 \documentclass{article}
 \usepackage[top=2cm,bottom=4cm,left=2.5cm,right=2.5cm]{geometry}
 \usepackage{lipsum}
-\usepackage[superscript,biblabel]{cite}
 \usepackage{url}
 \usepackage[hidelinks]{hyperref}
+\usepackage[superscript,biblabel]{cite}
 \usepackage{graphicx}
 \usepackage[font=small,labelfont=bf]{caption}
 \usepackage{parskip}
@@ -25,9 +25,13 @@ This document is more or less a run down of my experience with making a codec
 for \href{https://ffmpeg.org}{FFmpeg} with the intent of letting future
 developers have a slightly easier time of figuring out where things are.
 
-During my time with FFmpeg, I have only worked with developing a video codec up till now. Hence, my knowlegde is more or less limited to libavcodec, libavformat, and libavutil.
+During my time with FFmpeg, I have only worked with developing a video codec up 
+till now. Hence, my knowlegde is more or less limited to libavcodec, 
+libavformat, and libavutil.
 
-If you have any suggestions, please shoot me an email at aghorui (at) teknik (dot) io or open an issue on \href{https://github.com/daujerrine/ffmpeg-doc}{github}.
+If you have any suggestions, please shoot me an email at aghorui (at) teknik 
+(dot) io or open an issue on 
+\href{https://github.com/daujerrine/ffmpeg-doc}{Github}.
 
 This document is under public domain.
 
@@ -98,4 +102,9 @@ repetitive patterns such as for a set of decoder functions, parameters etc.
 \includesvg{images/classes_and_c.svg}
 \end{quote}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{thebibliography}{9}
+	\bibitem{ffmpeg}
+	ABCDEF
+\end{thebibliography}
 \end{document}
